--- a/peopleComments/app/src/main/res/layout/activity_main.xml
+++ b/peopleComments/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <FrameLayout
+        android:id="@+id/main_contain"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <RadioGroup
+        android:id="@+id/main_bottom_tabs"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="horizontal">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <RadioButton
+            android:id="@+id/main_home"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:button="@null"
+            android:gravity="center"
+            android:drawablePadding="@dimen/little_space"
+            android:drawableTop="@drawable/main_home_selector"
+            android:textColor="@drawable/main_color_selector"
+            android:text="@string/main_home"/>
+
+        <RadioButton
+            android:id="@+id/main_tuan"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:button="@null"
+            android:gravity="center"
+            android:drawablePadding="@dimen/little_space"
+            android:drawableTop="@drawable/main_tuan_selector"
+            android:textColor="@drawable/main_color_selector"
+            android:text="@string/main_tuan"/>
+
+        <RadioButton
+            android:id="@+id/main_search"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:button="@null"
+            android:gravity="center"
+            android:drawablePadding="@dimen/little_space"
+            android:drawableTop="@drawable/main_search_selector"
+            android:textColor="@drawable/main_color_selector"
+            android:text="@string/main_search"/>
+
+        <RadioButton
+            android:id="@+id/main_mine"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:button="@null"
+            android:gravity="center"
+            android:drawablePadding="@dimen/little_space"
+            android:drawableTop="@drawable/main_mine_selector"
+            android:textColor="@drawable/main_color_selector"
+            android:text="@string/main_mine"/>
+    </RadioGroup>
+
+
+
+</LinearLayout>
