--- a/peopleComments/app/src/main/res/values/colors.xml
+++ b/peopleComments/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="normal_orange_color">#FF6633</color>
+    <color name="normal_bg_color">#E0DFE0</color>
+    <color name="white">#FFFFFF</color>
+    <color name="gray">#696969</color>
 </resources>
